completed the chat functionality, home, login and signup page

--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="chat-container">
     <div class="chat-messages" #chatMessages>
       <ng-container *ngIf="!loading; else loader">
