--- a/frontend/src/app/chat/chat.component.css
+++ b/frontend/src/app/chat/chat.component.css
@@ -1,76 +1,89 @@
 .chat-container {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 16px;
-    margin: 0 auto;
-    width:95%;
-    height:90vh;
-    background-color: #f0fcfd;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  border-radius: 8px;
+  padding: 20px 16px 16px 16px;
+  margin: 0 auto;
+  width: 90%;
+  height: 75vh;
+  background-color: #BFCC94;
 }
 
 .chat-messages {
-    width: 95%;
-    height: 85%;
-    overflow-y: auto;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 20px;
-    margin-bottom: 12px;
-    background-color: #fff;
+  width: 95%;
+  height: 85%;
+  overflow-y: auto;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 20px;
+  margin-bottom: 12px;
+  background-color: #fff;
 }
 
 .chat-input input {
-    width: 90%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-right: 8px;
+  width: 90%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-family: inherit;
+  margin-right: 8px;
 }
-
+input:focus{
+  outline: none;
+}
 .chat-input button {
-    padding: 8px 23px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  padding: 8px 23px;
+  background-color: #456187;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.chat-input button:hover{
+  background-color: #6882a7;
+  transition: background-color ease-in 0.3s;
+}
+.user-message {
+  background-color: #007bff;
+  /* Blue for user messages */
+  color: #fff;
+  padding: 8px;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  /* width: fit-content; */
 }
 
-.user-message {
-    background-color: #007bff; /* Blue for user messages */
-    color: #fff;
-    padding: 8px;
-    border-radius: 8px;
-    margin-bottom: 8px;
-  }
-  
-  .server-message {
-    background-color: #f0f0f0; /* Light gray for server messages */
-    padding: 8px;
-    border-radius: 8px;
-    margin-bottom: 8px;
+.server-message {
+  background-color: #f0f0f0;
+  /* Light gray for server messages */
+  padding: 8px;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  /* width: fit-content; */
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  font-size: 14px;
+  color: #999;
+}
+
+.server-message.typing::after {
+  content: '';
+  animation: typing 0.7s infinite;
+}
+
+
+@keyframes typing {
+
+  0%,
+  100% {
+    opacity: 0.5;
   }
 
-  .loader {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    font-size: 14px;
-    color: #999;
+  50% {
+    opacity: 1;
   }
-
-  .server-message.typing::after {
-    content: '';
-    animation: typing 0.7s infinite;
-  }
-  
-  @keyframes typing {
-    0%,
-    100% {
-      opacity: 0.5;
-    }
-    50% {
-      opacity: 1;
-    }
-  }
+}
