--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
-    background-color: rgb(116, 184, 240);
+    background-color: #ffffff;
+    background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 10h10v10H0V10zM10 0h10v10H10V0z' fill='%23b4cded' fill-opacity='0.06' fill-rule='evenodd'/%3E%3C/svg%3E");
+    font-family: 'Rubik', sans-serif;   
 }
