--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav>
     <div (click)="redirect('')">
         <!-- Logo -->
-        <img src="" alt="Parent Guide">
+        <!-- <img src="" alt="Parent Guide"> -->
+        <p>Parenting Assist</p>
     </div>
     <div>
         <div (click)="redirect('')">Home</div>
